// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BettingEngineService golden — analyzeFixture decision output > locks the NO_BET decision when no market odds are available 1`] = `
{
  "deterministicScore": 0.645302,
  "fixtureId": "fixture-id",
  "modelRunId": "run-id",
  "probabilities": {
    "away": 0.131597,
    "bttsNo": 0.49895,
    "bttsYes": 0.50105,
    "dc12": 0.810653,
    "dc1X": 0.868403,
    "dcX2": 0.320944,
    "draw": 0.189347,
    "firstHalfWinner": {
      "away": 0.141501,
      "draw": 0.335701,
      "home": 0.522798,
    },
    "home": 0.679056,
    "htft": {
      "AWAY_AWAY": 0.075816,
      "AWAY_DRAW": 0.038332,
      "AWAY_HOME": 0.027353,
      "DRAW_AWAY": 0.047502,
      "DRAW_DRAW": 0.112695,
      "DRAW_HOME": 0.175504,
      "HOME_AWAY": 0.008291,
      "HOME_DRAW": 0.038332,
      "HOME_HOME": 0.476175,
    },
    "ouHT": {
      "OVER_0_5": 0.777059,
      "OVER_1_5": 0.442459,
      "UNDER_0_5": 0.222941,
      "UNDER_1_5": 0.557541,
    },
    "over15": 0.801125,
    "over25": 0.577218,
    "over35": 0.353172,
    "over45": 0.185034,
    "under15": 0.198875,
    "under25": 0.422782,
    "under35": 0.646828,
    "under45": 0.814966,
  },
  "status": "analyzed",
  "valueBet": null,
}
`;

exports[`BettingEngineService golden — analyzeFixture decision output > locks the decision for a strong-home fixture with generous home odds 1`] = `
{
  "deterministicScore": 0.645302,
  "fixtureId": "fixture-id",
  "modelRunId": "run-id",
  "probabilities": {
    "away": 0.131597,
    "bttsNo": 0.49895,
    "bttsYes": 0.50105,
    "dc12": 0.810653,
    "dc1X": 0.868403,
    "dcX2": 0.320944,
    "draw": 0.189347,
    "firstHalfWinner": {
      "away": 0.141501,
      "draw": 0.335701,
      "home": 0.522798,
    },
    "home": 0.679056,
    "htft": {
      "AWAY_AWAY": 0.075816,
      "AWAY_DRAW": 0.038332,
      "AWAY_HOME": 0.027353,
      "DRAW_AWAY": 0.047502,
      "DRAW_DRAW": 0.112695,
      "DRAW_HOME": 0.175504,
      "HOME_AWAY": 0.008291,
      "HOME_DRAW": 0.038332,
      "HOME_HOME": 0.476175,
    },
    "ouHT": {
      "OVER_0_5": 0.777059,
      "OVER_1_5": 0.442459,
      "UNDER_0_5": 0.222941,
      "UNDER_1_5": 0.557541,
    },
    "over15": 0.801125,
    "over25": 0.577218,
    "over35": 0.353172,
    "over45": 0.185034,
    "under15": 0.198875,
    "under25": 0.422782,
    "under35": 0.646828,
    "under45": 0.814966,
  },
  "status": "analyzed",
  "valueBet": {
    "comboMarket": null,
    "comboPick": null,
    "ev": "0.49392302078883446",
    "fixtureId": "fixture-id",
    "market": "ONE_X_TWO",
    "modelRunId": "run-id",
    "odds": "2.2",
    "pick": "HOME",
    "pickKey": "ONE_X_TWO|HOME|-|-",
    "probability": "0.6790559185403793",
    "qualityScore": "0.31872937690645002305",
    "stakePct": "0.01",
  },
}
`;
